oncokb/oncokb-prod/clinical_trials_matching.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clinical-trials-matching
  labels:
    run: clinical-trials-matching
  namespace: oncokb
spec:
  replicas: 1
  selector:
    matchLabels:
      run: clinical-trials-matching
  template:
    metadata:
      labels:
        run: clinical-trials-matching
    spec:
      containers:
        - env:
          name: clinical-trials-matching
          image: oncokb/clinical-trials-matching:0.0.1
          ports:
            - containerPort: 2333
          args:
          - /bin/bash
          - -c
          - npm run build && node /usr/src/app/dist/app.js
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: clinical-trials-matching
  name: clinical-trials-matching
  namespace: oncokb
  selfLink: /api/v1/namespaces/oncokb/services/clinical-trials-matching
spec:
  ports:
    - port: 2333
      name: http
      targetPort: 2333
  selector:
    run: clinical-trials-matching
  type: ClusterIP
